--- a/Builds/MacOSX/Info-AU.plist
+++ b/Builds/MacOSX/Info-AU.plist
@@ -29,7 +29,7 @@
     <array>
       <dict>
         <key>name</key>
-        <string>yourcompany: AutomationBridge</string>
+        <string>Laphicet Crowe: AutomationBridge</string>
         <key>description</key>
         <string>AutomationBridge</string>
         <key>factoryFunction</key>
@@ -39,16 +39,11 @@
         <key>type</key>
         <string>aufx</string>
         <key>subtype</key>
-        <string>Qeem</string>
+        <string>DRcm</string>
         <key>version</key>
         <integer>65536</integer>
-        <key>resourceUsage</key>
-        <dict>
-          <key>network.client</key>
-          <true/>
-          <key>temporary-exception.files.all.read-write</key>
-          <true/>
-        </dict>
+        <key>sandboxSafe</key>
+        <true/>
       </dict>
     </array>
   </dict>
