--- a/Builds/MacOSX/Info-AU.plist
+++ b/Builds/MacOSX/Info-AU.plist
@@ -35,7 +35,7 @@
         <key>factoryFunction</key>
         <string>AutomationBridgeAUFactory</string>
         <key>manufacturer</key>
-        <string>Manu</string>
+        <string>ChMe</string>
         <key>type</key>
         <string>aumi</string>
         <key>subtype</key>
