--- a/Builds/VisualStudio2019/AutomationBridge_SharedCode.vcxproj.filters
+++ b/Builds/VisualStudio2019/AutomationBridge_SharedCode.vcxproj.filters
@@ -409,9 +409,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Source\CheckBoxColumn.cpp">
-      <Filter>AutomationBridge\Source</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Source\PluginEditor.cpp">
       <Filter>AutomationBridge\Source</Filter>
     </ClCompile>
@@ -421,7 +418,7 @@
     <ClCompile Include="..\..\Source\PluginSettings.cpp">
       <Filter>AutomationBridge\Source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Source\SimpleListBoxModel.cpp">
+    <ClCompile Include="..\..\Source\DeviceListBox.cpp">
       <Filter>AutomationBridge\Source</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\..\..\..\Program Files (x86)\JUCE\modules\juce_audio_basics\buffers\juce_AudioChannelSet.cpp">
@@ -2352,9 +2349,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Source\CheckBoxColumn.h">
-      <Filter>AutomationBridge\Source</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Source\PluginEditor.h">
       <Filter>AutomationBridge\Source</Filter>
     </ClInclude>
@@ -2364,7 +2358,7 @@
     <ClInclude Include="..\..\Source\PluginSettings.h">
       <Filter>AutomationBridge\Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Source\SimpleListBoxModel.h">
+    <ClInclude Include="..\..\Source\DeviceListBox.h">
       <Filter>AutomationBridge\Source</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\..\..\..\Program Files (x86)\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h">
