--- a/Builds/MacOSX/Info-AU.plist
+++ b/Builds/MacOSX/Info-AU.plist
@@ -8,7 +8,7 @@
     <key>CFBundleIconFile</key>
     <string></string>
     <key>CFBundleIdentifier</key>
-    <string>com.yourcompany.AutomationBridge</string>
+    <string>AutomationBridge</string>
     <key>CFBundleName</key>
     <string>AutomationBridge</string>
     <key>CFBundleDisplayName</key>
