Show prefs window

--- a/.gitignore
+++ b/.gitignore
@@ -8,19 +8,24 @@
 *.dll
 *.dSYM
 *.dylib
+*.exe
 *.exp
 *.gch
 *.ilk
 *.ipch
+*.la
+*.lai
 *.lastbuildstate
 *.lib
 *.log
 *.manifest
 *.mode1v3
+*.moved-aside
 *.o
 *.obj
 *.out
 *.pbxuser
+*.pc
 *.pch
 *.pdb
 *.res
@@ -30,7 +35,9 @@
 *.user
 *.VC.db
 *.vst3
+*.xcworkspace
 .directory
 .DS_Store
 desktop.ini
 Thumbs.db
+xcuserdata
