Preliminary fader layout work

--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,9 @@
-*~
-*.a
-*.component
-*.d
-*.db
-*.db-shm
-*.db-wal
-*.dll
-*.dSYM
-*.dylib
-*.exe
-*.exp
-*.gch
-*.ilk
-*.ipch
-*.la
-*.lai
-*.lastbuildstate
-*.lib
-*.log
-*.manifest
-*.mode1v3
-*.moved-aside
-*.o
-*.obj
-*.out
-*.pbxuser
-*.pc
-*.pch
-*.pdb
-*.res
-*.so
-*.suo
-*.tlog
-*.user
-*.VC.db
-*.vst3
-*.xcworkspace
-.directory
 .DS_Store
-desktop.ini
+.vs
+build
+project.xcworkspace
 Thumbs.db
+x64
 xcuserdata
+*.mode1v3
+*.pbxuser
